// Generated using SwiftGen, by O.Halligon — https://github.com/AliSoftware/SwiftGen

import UIKit

extension UIImage {
  enum Asset: String {
    case AlarmClockAdd = "AlarmClockAdd"
    case AlarmClockEmotyIcon = "AlarmClockEmotyIcon"
    case AlarmClockNavSave = "AlarmClockNavSave"
    case Backbtn = "backbtn"
    case Banner_1 = "banner_1"
    case Banner_2 = "banner_2"
    case Banner_3 = "banner_3"
    case Banner_home = "banner_home"
    case CameraFlashAuto = "CameraFlashAuto"
...
