...
        
        super.viewDidLoad()

        // Do any additional setup after loading the view.
        
        //用于UITest查找Table
        self.tableView.accessibilityIdentifier = "AlarmClockTable"
        
        updateNavUI()
        
        self.automaticallyAdjustsScrollViewInsets = false
        self.view.backgroundColor = UIColor(named: .HomeViewMainColor)
        
...
