...
"Contacts.ListCell.Cavy"               = "生活豚鼠";
"Contacts.SearchBar.Search"            = "搜索";
"Contacts.Title"                       = "联系人";
"Contacts.NewFriendsCell"              = "新的朋友";
"Contacts.AddFriendsCell"              = "添加好友";
"Contacts.SearchplaceHolder"           = "  搜索你得联系人";
"Contacts.ListCell.Delete"             = "删除";
"Contacts.ListCell.Care"               = "关注";
"Contacts.ListCell.UndoCare"           = "取消关注";
"Contacts.ListCell.Add"                = "添加";
"Contacts.ListCell.Agree"              = "同意";
"Contacts.ListCell.AlreaydAdd"         = "已发送";
"Contacts.Search.PhoneNum"             = "通讯录好友";
...
